--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Google Drive Gallery</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -102,8 +103,15 @@
 
       $('#debugMode').prop(
         'checked',
-        localStorage.getItem(CACHE_DEBUG_MODE) !== 'false'
+        localStorage.getItem(CACHE_DEBUG_MODE) === 'true'
       );
+
+      // register listener to load more images when scrolling to bottom
+      $(window).scroll(function() {
+        if ($(window).scrollTop() + $(window).height() == $(document).height()) {
+          listFiles();
+        }
+      });
     }
 
     /**
@@ -163,8 +171,8 @@
           return;
         }
 
-        let html = files.map(toFileCellHtml).join('');
-        $('#fileListContainer').html(html);
+        let container = $('#fileListContainer');
+        let html = files.forEach((file) -> container.append(toFileCellHtml(file)));
       } catch (err) {
         handleError(err);
       }
