--- a/index.html
+++ b/index.html
@@ -115,11 +115,16 @@
     }
 
     function onScroll() {
-      if ($(window).scrollTop() + window.innerHeight >= document.body.scrollHeight) {
-      // if ($(window).scrollTop() + $(window).height() == $(document).height()) {
-        debugAlert("scrolled to bottom");
-        listFiles();
+      if ($(document).height() > $(window).height()) {
+        if ($(window).scrollTop() == $(document).height() - $(window).height()) {
+          listFiles();
+        }
       }
+      //if ($(window).scrollTop() + window.innerHeight >= document.body.scrollHeight) {
+      // if ($(window).scrollTop() + $(window).height() == $(document).height()) {
+//         debugAlert("scrolled to bottom");
+//         listFiles();
+//       }
     }
 
     /**
