--- a/index.html
+++ b/index.html
@@ -115,16 +115,11 @@
     }
 
     function onScroll() {
-      if ($(document).height() > $(window).height()) {
-        if ($(window).scrollTop() == $(document).height() - $(window).height()) {
-          listFiles();
-        }
-      }
-      //if ($(window).scrollTop() + window.innerHeight >= document.body.scrollHeight) {
+      if ($(window).scrollTop() + window.innerHeight >= document.body.scrollHeight) {
       // if ($(window).scrollTop() + $(window).height() == $(document).height()) {
-//         debugAlert("scrolled to bottom");
-//         listFiles();
-//       }
+        debugAlert("scrolled to bottom");
+        listFiles();
+      }
     }
 
     /**
@@ -318,7 +313,7 @@
           </a>
         </li>
         <li>
-          <a class="dropdown-item album-menu" href="#" onclick="switchAlbum('1ytzgYQc_SBp-PRTmbwb24PXJ9pWRMHL5')">
+          <a class="dropdown-item album-menu" href="#" onclick="switchAlbum('1yrIXKE-5XKQOe7_pmLduVFynqpk_z68i')">
           20221016-yokohama-yosakoi
           </a>
         </li>
