--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     </div>
 
     <div class="spinner-border" role="status">
-      <span class="sr-only">Loading...</span>
+      <span class="sr-only"></span>
     </div>
 
     <!-- Modal -->
