--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     }
 
     function getFitScreenLink(id) {
-      return "https://drive.google.com/thumbnail?authuser=0&sz=w640&id=" + id;
+      return "https://drive.google.com/thumbnail?authuser=0&sz=w1024&id=" + id;
     }
 
     function toFileCellHtml(file) {
@@ -375,19 +375,17 @@
     <div class="modal fade" id="photoFrame" tabindex="-1" aria-labelledby="photoFrameLabel" aria-hidden="true">
       <div class="modal-dialog modal-fullscreen bg-transparent">
         <div class="modal-content">
-          <div class="modal-body">
-            <button type="button"
-                    class="btn-close fixed-top fixed-right"
-                    data-bs-dismiss="modal" aria-label="Close">
-            </button>
+          <button type="button"
+                  class="btn-close fixed-top fixed-right"
+                  data-bs-dismiss="modal" aria-label="Close">
+          </button>
 
-            <img class="img-fluid" src="" alt="" /></a>
+          <img class="img-fluid" src="" alt="" />
 
-            <div class="fixed-bottom">
-              <a href="" class="download-link" download>
-                <button class="btn btn-light btn-lg"><i class="bi bi-download"></i></button>
-              </a>
-            </div>
+          <div class="fixed-bottom">
+            <a href="" class="download-link" download>
+              <button class="btn btn-light btn-lg"><i class="bi bi-download"></i></button>
+            </a>
           </div>
         </div>
       </div>
