--- a/index.html
+++ b/index.html
@@ -261,6 +261,10 @@
       //$('#photoFrame .modal-body img').attr("src", `https://drive.google.com/uc?export=view&id=${id}`);
     }
 
+    function dismissPhoto() {
+      $("#photoFrame").modal('hide');
+    }
+
     function setLoading() {
       loading = true;
       $('#fileListContainer .spinner-border').show();
@@ -378,14 +382,14 @@
     <!-- Modal -->
     <div class="modal fade" id="photoFrame" tabindex="-1" aria-labelledby="photoFrameLabel" aria-hidden="true">
       <div class="modal-dialog modal-fullscreen">
-        <div class="modal-content">
+        <div class="modal-content" onclick="dismissPhoto()">
           <div class="modal-body">
             <button type="button"
                     class="btn-close fixed-top fixed-right"
                     data-bs-dismiss="modal" aria-label="Close">
             </button>
 
-            <img class="img-fluid" src="" alt="" />
+            <img class="img-fluid align-middle" src="" alt="" />
 
             <div class="fixed-bottom">
               <a href="" class="download-link" download>
