--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
   <title>Google Drive Gallery</title>
   <meta charset="utf-8">
@@ -11,15 +11,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
   <style>
-    @media screen {
-      .main-container {
-        width: 60%;
-        /* border-radius: 0.5%; */
-        padding: 5px;
-        margin-top: 5px;
-      }
-    }
-
     .modal-content {
       background-color: transparent;
     }
@@ -40,8 +31,8 @@
     // File list: https://developers.google.com/drive/api/v3/reference/files/list
     
     const CLIENT_ID="1015092151085-osb88kjq9jtmve4hv2bisa0ugda4iun0.apps.googleusercontent.com";
-    const API_KEY="AIzaSyC-AjutFl4UADerP1ybHDY3CGvHyUnJKSA";
-    //const API_KEY="AIzaSyCKIA6PZIy_6Y92eISUn7XyIFk_DxRFBEQ";
+    // const API_KEY="AIzaSyC-AjutFl4UADerP1ybHDY3CGvHyUnJKSA";
+    const API_KEY="AIzaSyDZi4pFkXdEKXDyY2y7Ad0t_YVp4O5awHo"; // local
 
     // Discovery doc URL for APIs used by the quickstart
     const DISCOVERY_DOC = 'https://www.googleapis.com/discovery/v1/apis/drive/v3/rest';
@@ -116,8 +107,19 @@
       $(document.body).on('touchmove', onScroll); // for mobile
       $(window).on('scroll', onScroll);
 
+      // prevent modal dialog to be closed after functional button is clicked
+      $(".fixed-bottom button").click(function (event) {
+        event.stopPropagation();
+      });
+
       // trigger selection by default album
       $(".album-menu:first").click();
+
+      // initialize for bootstrap popover components
+      new bootstrap.Popover('.file-info-btn', {
+        container: 'body',
+        html: true
+      });
     }
 
     async function onScroll() {
@@ -187,7 +189,7 @@
       try {
         let files = await getFileList();
 
-        if (files.length == 0) {
+        if (files.length === 0) {
           showInfo('No data');
           return;
         }
@@ -224,6 +226,9 @@
         },
         getExifTime: function() {
           return this.imageMediaMetadata ? this.imageMediaMetadata.time : "";
+        },
+        toText: function() {
+          return btoa(JSON.stringify(this));
         }
       }));
     }
@@ -251,14 +256,16 @@
       return `<figure class="figure">
       <img src="${file.thumbnailLink}" class="figure-img img-fluid rounded" alt="${file.name}"
        data-bs-toggle="modal" data-bs-target="#photoFrame"
-       onclick="showPhoto('${file.id}', '${file.thumbnailLink}')"/>
+       onclick="showPhoto('${file.id}', '${file.toText()}')"/>
       <figcaption class="figure-caption text-end">${datetime}</figcaption></figure>`;
     }
 
-    function showPhoto(id, thumbnailLink) {
+    function showPhoto(id, data) {
       $('#photoFrame .modal-body img').attr("src", getFitScreenLink(id));
       $('#photoFrame .modal-body .download-link').attr("href", `https://drive.google.com/uc?export=download&id=${id}`);
-      //$('#photoFrame .modal-body img').attr("src", `https://drive.google.com/uc?export=view&id=${id}`);
+      //$('#photoFrame .modal-body [data-bs-title=Info]').attr("data-bs-content", atob(data));
+      $('#photoFrame .modal-body .file-info').html(atob(data));
+      //$('#photoFrame .modal-body img').attr("src", `https://drive.google.com/uc?export=view&id=${file.id}`);
     }
 
     function dismissPhoto() {
@@ -378,23 +385,27 @@
     <div class="spinner-border" role="status">
       <span class="sr-only"></span>
     </div>
-
     <!-- Modal -->
     <div class="modal fade" id="photoFrame" tabindex="-1" aria-labelledby="photoFrameLabel" aria-hidden="true">
       <div class="modal-dialog modal-fullscreen">
         <div class="modal-content" onclick="dismissPhoto()">
           <div class="modal-body">
-            <button type="button"
-                    class="btn-close fixed-top fixed-right"
-                    data-bs-dismiss="modal" aria-label="Close">
-            </button>
+            <div>
+              <button type="button"
+                      class="btn-close fixed-top fixed-right"
+                      data-bs-dismiss="modal" aria-label="Close">
+              </button>
 
-            <img class="img-fluid align-middle" src="" alt="" />
-
+              <img class="img-fluid align-middle" src="" alt=""/>
+            </div>
             <div class="fixed-bottom">
               <a href="" class="download-link" download>
                 <button class="btn btn-light btn-lg"><i class="bi bi-download"></i></button>
               </a>
+              <button type="button" class="file-info-btn btn btn-lg btn-light" data-bs-container="body" data-bs-toggle="popover"
+                      data-bs-title="<span class='file-info'></span>" data-bs-placement="top" data-bs-content="<span class='file-info'></span>">
+                <i class="bi bi-info-square"></i>
+              </button>
             </div>
           </div>
         </div>
